--- a/apps/pb/package.json
+++ b/apps/pb/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "precious-petals-crm",
+  "name": "pb-crm",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "pnpm -r --parallel dev"
+    "dev": "./pocketbase serve --http=0.0.0.0:8090",
+    "build": "echo 'Pocketbase has no build step"
   },
   "keywords": [],
   "author": "",
