--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,10 +14,10 @@
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "pocketbase": "^0.26.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.4",
-    "pocketbase": "^0.26.2"
+    "react-router": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
