--- a/apps/frontend/tsconfig.app.json
+++ b/apps/frontend/tsconfig.app.json
@@ -7,7 +7,7 @@
     "module": "ESNext",
     "types": [
       "vite/client",
-      "vitest"
+      "vitest/globals"
     ],
     "skipLibCheck": true,
     "moduleResolution": "bundler",
