--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "pocketbase": "^0.26.2",
     "react": "^19.2.0",
+    "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
     "react-router": "^7.9.4",
