--- a/apps/pb/Dockerfile
+++ b/apps/pb/Dockerfile
@@ -1,36 +1,25 @@
-# ---------- build custom pocketbase ----------
-FROM golang:1.23-alpine AS builder
+FROM golang:1.25-alpine AS builder
 
 WORKDIR /src
-
 RUN apk add --no-cache git ca-certificates
 
-# go deps
 COPY go.mod go.sum ./
 RUN go mod download
 
-# copy only what's needed to build
 COPY main.go ./
-
-# build custom PB binary
 RUN go build -o /precious-petals-crm .
 
-# ---------- runtime ----------
-FROM alpine:latest
+FROM surnet/alpine-wkhtmltopdf:3.20.3-0.12.6-full
 
 RUN apk add --no-cache \
     ca-certificates \
     openssh \
-    wkhtmltopdf \
     ttf-dejavu \
     fontconfig
 
 WORKDIR /pb
 
-# custom pocketbase binary
 COPY --from=builder /precious-petals-crm /pb/precious-petals-crm
-
-# runtime assets only
 COPY ./pb_hooks /pb/pb_hooks
 COPY ./pb_public /pb/pb_public
 
@@ -38,4 +27,8 @@ EXPOSE 8080
 
 ENV INVOICE_PDF_BIN=wkhtmltopdf
 
-CMD ["/pb/precious-petals-crm", "serve", "--http=0.0.0.0:8080"]
+# ✅ IMPORTANT: override the base image ENTRYPOINT (it defaults to wkhtmltopdf)
+ENTRYPOINT []
+
+# (optional but recommended) make PB always use the mounted volume:
+CMD ["/pb/precious-petals-crm", "serve", "--http=0.0.0.0:8080", "--dir=/pb/pb_data"]
